src/objects/FeeStorage__c.object
<CustomObject>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>FeeStorages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfTimes__c</fullName>
        <label>NumberOfTimes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>FeeStorages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastUpdated__c</fullName>
        <formula>ADDMONTHS(startDate__c, NumberOfTimes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lastUpdated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>uniqueName__c</fullName>
        <label>uniqueName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Scheduled Invoice</label>
    <nameField>
        <label>FeeStorage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>